--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
             <div class="header__block">
                 <img src="./image/header.jpg" alt="" class="header__image">
                 <p class="header__title">Хочу поздравить тебя с 14 февраля!</p>
-
             </div>
         </header>
         <main class="content">
-
+            <section class="text">
+                <h2 class="text__title">Ты мне очень нравишься!</h2>
+                <img src="" alt="" class="text__image">
+                <p class="text__text">Я понял, что я безумно люблю тебя. Каждый день думать о тебе тяжело.
+                    Я понял, что не делал всего для наших отношений, поэтому они распались. Я сейчас готов рвать и метать ради малейшего
+                     шанса на попытку начать с начала. Пускай ты не веришь в меня, но я хочу в этом сайте доказать обратное. 
+                    Пожалуйста не восприми всё в штыки, а просто полистай всё.
+                </p>
+            </section>
         </main>
         <footer class="footer">
         </footer>
