--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="page">
         <header class="header">
             <div class="header__block">
+                <h1 class="header__title">Хочу поздравить тебя с 14 февраля!</h1>
                 <img src="./image/header.jpg" alt="" class="header__image">
-                <p class="header__title">Хочу поздравить тебя с 14 февраля!</p>
             </div>
         </header>
         <main class="content">
