--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
         <header class="header">
             <div class="header__block">
                 <h1 class="header__title">Хочу поздравить тебя с 14 февраля!</h1>
-                <img src="./image/header.jpg" alt="" class="header__image">
             </div>
         </header>
         <main class="content">
             <section class="text">
                 <h2 class="text__title">Ты мне очень нравишься!</h2>
-                <img src="" alt="" class="text__image">
+                <img src="./image/para.jpg" alt="Совместное фото" class="text__image">
                 <p class="text__text">Я понял, что я безумно люблю тебя. Каждый день думать о тебе тяжело.
                     Я понял, что не делал всего для наших отношений, поэтому они распались. Я сейчас готов рвать и метать ради малейшего
                      шанса на попытку начать с начала. Пускай ты не веришь в меня, но я хочу в этом сайте доказать обратное. 
