--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Поздравление с 14 февраля</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./normalize.css">
-    <!-- <link rel="stylesheet" href="./pages/index.css"> -->
+    <link rel="stylesheet" href="./page/page.css">
 </head>
 
 <body>
@@ -18,14 +16,57 @@
             </div>
         </header>
         <main class="content">
-            <section class="text">
-                <h2 class="text__title">Ты мне очень нравишься!</h2>
-                <img src="./image/para.jpg" alt="Совместное фото" class="text__image">
-                <p class="text__text">Я понял, что я безумно люблю тебя. Каждый день думать о тебе тяжело.
-                    Я понял, что не делал всего для наших отношений, поэтому они распались. Я сейчас готов рвать и метать ради малейшего
-                     шанса на попытку начать с начала. Пускай ты не веришь в меня, но я хочу в этом сайте доказать обратное. 
-                    Пожалуйста не восприми всё в штыки, а просто полистай всё.
+            <section class="apologies">
+                <h2 class="apologies__title text__title">Я тебя очень сильно люблю!</h2>
+                <img src="./image/para.jpg" alt="Совместное фото" class="apologies__image">
+                <p class="apologies__text text">Я понял, что я безумно люблю тебя. Каждый день думать о тебе тяжело.
+                    Я понял, что не делал всего для наших отношений, поэтому они распались. Я сейчас готов рвать и
+                    метать ради малейшего
+                    шанса на попытку начать с начала. Пускай ты не веришь в меня, но я хочу на примере этого сайта
+                    доказать обратное.
+                    Перестань обижатся на меня. Я поступил очень глупо сказава такое, а потом снова извинятся. Только
+                    сейча я ачал извинятся так,
+                    как нигода ещё не извинялся.
                 </p>
+            </section>
+            <section class="compliments">
+                <h2 class="compliments__big-title text__title">За что я тебя люблю за ...</h2>
+                <div class="compliments__block">
+                    <img src="./image/krasota.jpg" alt="" class="compliments__image">
+                    <h3 class="compliments__title text__title">Твою красоту</h3>
+                    <p class="compliments__apologies text">Очень нравится твоя офигенная фигура, от которой я теку. Твои крассивые ноги, так приятно положить на них руку. Люблю смотреть в твои карие глаза, пракла так неловко тстановитсяЮ когда 
+                        встречаемся взглядами) Красивые длинные волосы, и вообще в моих глазах ты идеальна.
+                    </p>
+                </div>
+                <div class="compliments__block">
+                    <img src="./image/simple.jpg" alt="" class="compliments__image">
+                    <h3 class="compliments__title text__title">То какая ты есть</h3>
+                    <p class="compliments__apologies text">Я принял такую тебя какая ты есть. Я обожаю когда ты слегк сердишься и говоришь: ну и один один, либо что-то другое. 
+                        Как ты говоришь какой-то бред и я ему верю, потому как не верить словам любимой девушки?! Что не паришься что надеть, потому что в любом образе ты прекрасна.
+                    </p>
+                </div>
+                <div class="compliments__block">
+                    <img src="./image/delo.jpg" alt="" class="compliments__image">
+                    <h3 class="compliments__title text__title">За отношение к любимому делу</h3>
+                    <p class="compliments__apologies text">Когда ты реально загораешься идей и начинаешь сворачивать горы.
+                        Я смотрю и любуюсь, мне хочется иметь такую девушку. Так приятно смотреть когда ты работаешь с сабаками, как ты думаешь чем и как можно исправить её то 
+                        или иное поведение. С таким азартом в глазах рассказываешь про это. Ты расцветаешь так в эти моменты, что мне рядом тоже хочется работать над собой. За это очень сильно люблю!
+                    </p>
+                </div>
+                <div class="compliments__block">
+                    <img src="./image/lubova.jpg" alt="" class="compliments__image">
+                    <h3 class="compliments__title text__title">За твоё отношение ко мне</h3>
+                    <p class="compliments__apologies text">Каким ты меня только не видела? Ты знаешь меня как облупленого. В любой ситуации не ты не отвернёшься от меня, будешь всегда со мной.
+                        Ты принимаешь меня со всеми моими загонами и тревожностями.
+                    </p>
+                </div>
+                <div class="compliments__block">
+                    <img src="./image/calmly.jpg" alt="" class="compliments__image">
+                    <h3 class="compliments__title text__title">За то как мне спокойно с тобой</h3>
+                    <p class="compliments__apologies text">Когда ты рядом со мной мне так спойной и хорошо. Всегда знаю что ты меня поддержишь и успокоишь.
+                        Я забыаю все свои дела, наслыждаюсь моментом с тобой. Ты меня отвлекаешь от моих дел, а я взамен пыатюсь сделать то же самое.
+                    </p>
+                </div>
             </section>
         </main>
         <footer class="footer">
